--- a/lottery-interface/.settings/org.eclipse.wst.common.component
+++ b/lottery-interface/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,9 @@
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/WebRoot" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <dependent-module archiveName="xtone-java-common.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/xtone-java-common/xtone-java-common">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
 
         <property name="java-output-path" value="/lottery-interface/WebRoot/WEB-INF/classes"/>
         <property name="context-root" value="a.yt.youkala.com"/>
